eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Manager_1_2_1_Form__c.object
<CustomObject>
    <description>This form is the managers 1-2-1 form to be used for monthly 1-2-1 discussions with Line managers.</description>
    <fields>
        <fullName>Feedback_from_Staff__c</fullName>
        <label>Feedback from Staff</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managers_Comments_on_Review_Period__c</fullName>
        <label>Managers Comments on Review Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managers_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managers Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>X1_2_1_Form_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_of_review__c</fullName>
        <label>Period of review</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December 2016</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_and_Location__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Contact Centre Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Service Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Branch Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Business Development manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Centre Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Members_comments_on_review_period__c</fullName>
        <label>Staff Members comments on review period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Name</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipName>X1_2_1_Form_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1_Action_Points_from_last_One_to_One__c</fullName>
        <label>1. Action Points from last One to One</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2_Updates_since_last_month__c</fullName>
        <label>2. Updates since last month</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X3_Progress_against_performance_Objectiv__c</fullName>
        <label>3. Progress against performance Objectiv</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4_Risks__c</fullName>
        <label>4. Risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X5_Departmental_Project_Status__c</fullName>
        <label>5. Departmental Project Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X6_Development_Coaching__c</fullName>
        <label>6. Development &amp; Coaching</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X7_Staffing_Personnel_Issues_Admin__c</fullName>
        <label>7. Staffing/Personnel Issues/Admin</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X8_Any_other_Issues_Points_to_raise__c</fullName>
        <label>8. Any other Issues/Points to raise</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X9_Specific_Action_Points__c</fullName>
        <label>9. Specific Action Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Manager 1-2-1 Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manager 1-2-1 Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>1-2-1 Form Manager</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>